Fix (createPost): Add error message for empty content when submitted without content; Minor fixes to flex spacing of content-area

--- a/frontend/src/styles/CreateComment.css
+++ b/frontend/src/styles/CreateComment.css
@@ -84,7 +84,7 @@
   letter-spacing: 0.5px;
 }
 
-.char-limit {
+.create-comment-body .char-limit {
   position: absolute;
   right: 0;
   margin: 5px 10px;
